@@ -2,4 +2,4 @@
 
 test ! -r build/configure && sh bootstrap.sh
 
-cd build && sh configure -C --prefix=$HOME/darkbot "$@" && make && make install && cd ..
+cd source && sh configure -C --prefix=$HOME/darkbot "$@" && make && make install && cd ..
