@@ -16,9 +16,11 @@ AC_DEFUN([gl_USE_SYSTEM_EXTENSIONS], [
   #AC_BEFORE([$0], [AC_COMPILE_IFELSE])
   #AC_BEFORE([$0], [AC_RUN_IFELSE])
 
-  AC_REQUIRE([AC_GNU_SOURCE])
-  AC_REQUIRE([AC_AIX])
-  AC_REQUIRE([AC_MINIX])
+# These are obsolete 
+# AC_REQUIRE([AC_GNU_SOURCE])
+#  AC_REQUIRE([AC_AIX])
+#  AC_REQUIRE([AC_MINIX])
+#
 
   AH_VERBATIM([__EXTENSIONS__],
 [/* Enable extensions on Solaris.  */
